website/ru: Update donations/_index.adoc
Sync to the EN revision (e05ba92d40bf5d897a954d6825ee6b2df8b72e7b)

Reported by:	vladlen
Reviewed by:	maxim (mentor), vladlen
Differential Revision:	https://reviews.freebsd.org/D54631

--- a/website/content/ru/donations/_index.adoc
+++ b/website/content/ru/donations/_index.adoc
@@ -1,99 +1,112 @@
 ---
-title: "Центр Пожертвований FreeBSD"
+title: "Центр пожертвований FreeBSD"
 sidenav: about
 --- 
 
-= Центр Пожертвований FreeBSD
+= Центр пожертвований FreeBSD
+
+== Финансовые пожертвования Фонду FreeBSD
+
+Усилия Фонда FreeBSD по привлечению финансирования жизненно важны для того, чтобы FreeBSD оставалась свободной. Вместе с ростом Проекта растут и затраты.
+
+Помогая Фонду, вы помогаете нам финансировать проекты и управлять ими, спонсировать мероприятия FreeBSD и предоставлять гранты на поездки разработчикам FreeBSD. Вы также помогаете нам представлять Проект при исполнении договоров, лицензионных соглашений, в вопросах авторских прав, товарных знаков и других юридически значимых соглашениях, требующих наличия зарегистрированного юридического лица.
+
+Для того, чтобы сделать финансовое пожертвование Фонду FreeBSD, пожалуйста, посетите соответствующую страницу пожертвований https://www.freebsdfoundation.org/donate/[Фонда FreeBSD].
 
 == Содержание
 
-* <<goal,Цели работы Центра Пожертвований>>
-* <<charter,Устав Центра Пожертвований>>
-* <<donating,Спонсирование Проекта FreeBSD>>
+* <<#goal,Цели Центра пожертвований>>
+* <<#charter,Устав Центра пожертвований>>
+* <<#donating,Пожертвования для Проекта FreeBSD>>
 
-== Остальные ссылки на пожертвования
+== Другие ссылки о пожертвованиях
 
-* link:wantlist[Список требуемого для Проекта FreeBSD]
 * link:donors[Перечень пожертвований для FreeBSD]
 
 [[goal]]
-== Цели проекта
+== Цель проекта
 
-Вместе с ростом количества пользователей FreeBSD увеличилось число людей, которые готовы предоставить Проекту материальные или финансовые ресурсы. Центр Пожертвований был создан для упорядочения обработки таких пожертвований своевременно и корректно.
+Вместе с ростом количества пользователей FreeBSD увеличилось и число людей, которые хотели бы предоставить Проекту материальные или финансовые ресурсы. Центр Пожертвований предназначен для упорядочивания таких пожертвований и обеспечения своевременности и корректности этого процесса.
 
 [[charter]]
-== Устав Центра Пожертвований
+== Устав Центра пожертвований
 
-Работа Начальника Центра Пожертвований заключается в поиске и правильном направлении пожертвований в соответствии с общепринятыми правилами. На нём лежат следующие обязанности.
+Работа Центра пожертвований заключается в поиске пожертвований и их обработке в соответствии с принятыми сообществом правилами. На нём лежат следующие обязанности:
 
-* составлять и поддерживать понятный перечень действий для обработки пожертвований.
-* своевременно отвечать на предложения по пожертвованию.
+* формировать и поддерживать понятный набор процедур для обработки пожертвований.
+* своевременно реагировать на предложения по пожертвованию.
 * поддерживать перечень оборудования и ресурсов, требуемых сообществу FreeBSD.
-* сопоставлять предложения по пожертвованию с сообществом разработчиков FreeBSD.
-* отслеживать пожертвования по всему процессу их предоставления.
-* управлять командой из 3-4 человек для постоянного обеспечения своевременности, полноты и корректности ответов на запросы.
-* официально приносить благодарности жертвователям за их вклад, когда процесс оформления закончен.
-* отслеживать состояния всех займов Проекту.
+* согласовывать предложения по пожертвованию с сообществом разработчиков FreeBSD.
+* сопровождать пожертвования по всему процессу их обработки.
+* работать с небольшой командой, во всех случаях обеспечивая своевременную, обоснованную и корректную реакцию.
+* публично приносить благодарности жертвователям и подтверждать их вклад по завершении процесса.
+* отслеживать состояние всех заимствований в адрес Проекта.
 * предоставлять открытую информацию обо всех пожертвованиях сообществу разработчиков FreeBSD.
 
 [[donating]]
-== Пожертвования Проекту FreeBSD
+== Процесс пожертвования Проекту FreeBSD
 
-Итак, вы хотите пожертвовать что-то Проекту FreeBSD? Великолепно! Мы сильно надеемся на пожертвования пользователей для выполнения нашей задачи. Пожалуйста, прочтите дальнейшую информацию, чтобы понять, как вступить в контакт с нами относительно вашего пожертвования.
-
-Если вы не знаете, что хотите отдать, взгляните на наш link:wantlist[перечень требуемого]. Мы возьмём любое оборудование из этого списка. Если у вас есть оборудование, которое вы готовы нам передать, читайте дальше.
+Итак, вы хотите пожертвовать что-то Проекту FreeBSD? Великолепно! В выполнении наших задач мы существенным образом опираемся на пожертвования пользователей. Пожалуйста, прочтите информацию ниже, чтобы разобраться, как вступить в контакт с нами относительно вашего пожертвования.
 
 [[taxcredit]]
-=== Налогообложение на пожертвования
+=== Налоговый вычет на пожертвования
 
-В целях налогообложения FreeBSD Foundation может выступать как благотворительная организация. Если вы живёте в Соединённых Штатах, ваше пожертвование при определённых условиях может быть вычтено из начисленной суммы налогов. Если вы хотите подтвердить факт пожертвования в целях налогообложения, пожалуйста, дайте нам знать об этом в момент посылки информации о будущем пожертвовании.
+С точки зрения налогообложения Фонд FreeBSD может выступать как благотворительная организация. Если вы живёте в Соединённых Штатах, то ваше пожертвование при определённых условиях может быть вычтено из суммы ваших налогов. Если в целях налогового учёта вам нужны соответствующие подтверждающие документы, пожалуйста, дайте нам знать об этом при отправке информации о вашем пожертвовании.
 
-Получить налоговую скидку не так уж просто, как кажется. Пожертвования, которые подлежат вычету, должны быть высланы в адрес Фонда FreeBSD. Затем доброволец из Фонда должен обработать пожертвование и переслать его реальному получателю. Фонд должен также иметь возможность показать, что пожертвование сделано в целях _общественной пользы_. Всё это в целом означает, что, хотя у нас есть разработчики, которые заинтересованы в получении большой коробки ISA-адаптеров из вашего чулана, вы не сможете за них получить налоговый вычет; объём работы, который нужно выполнить для её упаковки, посылки и документирования, гораздо больше её стоимости.
+Получить налоговый вычет не так просто, как может показаться. Команда по работе с пожертвованиями обязательно должна быть проинформирована о желании получить налоговый вычет, чтобы об этом можно было уведомить Фонд, а также проинформирована об отправке. Фонду также будет нужно знать, когда пожертвование было принято соответствующим получателем. Фонд должен также иметь возможность показать, что пожертвование сделано в целях _общественной пользы_. Всё это вместе означает, что, хотя у нас, вероятно, есть разработчики, которые могли бы быть заинтересованы в получении большой коробки адаптеров ISA из вашего чулана, вы, скорее всего, не сможете получить за них налоговый вычет; общий объём работы, которую нужно выполнить для их упаковки, отправки и документирования, существенно превышает их стоимость.
 
-Фонд FreeBSD предоставляет подтверждение на доставку оборудования. Однако он не даст оценки рыночной стоимости оборудования -- на самом деле закон запрещает это делать. Мы рекомендуем выяснить стоимость пожертвований оборудования где-нибудь в другом месте. Так как многое из получаемого оборудования устарело, выяснить рыночную стоимость весьма трудно, так что просим поискать на Ebay или других сайтах, посвящённых бывшему в употреблении оборудованию, суммы, которые платятся за похожее оборудование.
+Фонд FreeBSD предоставляет документы, подтверждающие доставку оборудования. Однако он не даст оценки рыночной стоимости оборудования -- на самом деле закон запрещает это делать. Мы рекомендуем выяснить стоимость жертвуемого оборудования где-нибудь в другом месте. Так как многое из получаемого оборудования устарело, выяснить рыночную стоимость весьма затруднительно, и мы просим поискать на Ebay или других сайтах, посвящённых бывшему в употреблении оборудованию, суммы, которые платятся за похожее оборудование.
+
+Чтобы получить налоговый документ на пожертвование, вам будет нужно заполнить https://www.freebsdfoundation.org/wp-content/uploads/2015/12/Hardware-Donation-Form.pdf[Форму о пожертвовании оборудования] на сайте Фонда FreeBSD.
 
 === Как сделать пожертвование
 
-Одной из целей работы Центра Пожертвований является соотнесение пожертвований и нужд разработчиков, которые могут их использовать. Мы не принимаем любые пожертвования; мы обрабатываем только те, что получают разработчика, могущего этим пожертвованием воспользоваться для улучшения FreeBSD. Это вообще экономит время и помогает жертвователям понять, что их пожертвования действительно поддерживают Проект FreeBSD. Обратной стороной медали является то, что мы должны владеть дополнительной информацией о вашем пожертвовании перед тем, как принять его.
+Частью работы Центра пожертвований является соотнесение пожертвований и нужд разработчиков, которые могут их использовать. Мы не принимаем просто любое пожертвование; мы обрабатываем только те из них, которые найдут свой дом у разработчика, могущего эти пожертвования использовать для улучшения FreeBSD. Это в целом экономит время и помогает дать жертвователям уверенность в том, что их пожертвования действительно поддерживают Проект FreeBSD. Обратной стороной медали является то, что мы должны владеть некоторой информацией о вашем пожертвовании перед тем, как принять его.
 
-Пожертвования обычно подпадают под одну из трёх категорий:
+В целом пожертвования разбиваются на три категории:
 
 * <<money,Финансы>>
 * <<systems,Компьютеры в комплекте>>
-* <<components,Аппаратные компоненты>>
+* <<components,Компьютерные комплектующие>>
 
-Если у вас есть что-то предложить, не подпадающее ни под одну из этих категорий, не беспокойтесь! Просто обратитесь с вашим предложением к нам на адрес donations@FreeBSD.org. То, что это не обычное предложение, вовсе не значит, что мы им не интересуемся.
+Если у вас есть что предложить, не подпадающее ни под одну из этих категорий, не беспокойтесь! Просто обратитесь с вашим предложением к нам по адресу donations@FreeBSD.org. То, что это нестандартное предложение, вовсе не значит, что оно нам неинтересно.
 
 [[money]]
-=== Финансовая поддержка
+=== Финансовые пожертвования
 
-Проект FreeBSD напрямую финансовую поддержку не принимает. Для нас её принимает организация-спонсор, http://www.freebsdfoundation.org[Фонд FreeBSD]. Пожалуйста, обратитесь к её сайту для выяснения всех подробностей относительно финансовой поддержки.
+Проект FreeBSD не принимает финансовые пожертвования напрямую. Для нас это делает спонсирующая организация, http://www.freebsdfoundation.org[Фонд FreeBSD]. Пожалуйста, обратитесь к её сайту для уточнения подробностей относительно финансовых пожертвований.
 
 [[systems]]
-=== Вычислительные системы в комплекте
+=== Компьютеры в комплекте
 
-Проекту FreeBSD всегда требуются компьютеры. Если у вас есть компьютер, который вы можете передать Проекту, пожалуйста, свяжитесь с нами со следующей информацией:
+Проекту FreeBSD всегда требуются компьютеры. Если у вас есть компьютер, который вы хотели бы передать Проекту, пожалуйста, свяжитесь с нами, предоставив следующую информацию:
 
-* Аппаратные спецификации: архитектура, материнская плата, процессор, объём дисковой памяти, оперативная память. (Если это компьютер Alpha, пожалуйста, включите выдачу команд SHOW CONFIG, SHOW MEM и SHOW DEV.)
-* Работает ли на системе FreeBSD, или она не поддерживается? Если это возможно, приложите выдачу dmesg от программы установки FreeBSD на этой системы.
-* Можете ли вы выслать эту систему?
-* Ваше физическое расположение. Мы стараемся сделать пересылку максимально простой и недорогой.
-* Также укажите, хотите ли вы получить <<taxcredit,налоговые вычеты>> за эту систему. (Заметьте, что не все пожертвования могут получить реальные налоговые вычеты, так как стоимость получения вычета может превысить стоимость пожертвования.)
+* Аппаратные спецификации: архитектура, материнская плата, процессор, дисковое пространство, оперативная память.
+* Работает ли на этой системе FreeBSD, или поддержка отсутствует? Если это возможно, пожалуйста, приложите выдачу dmesg от программы установки FreeBSD на этой системе.
+* Готовы ли вы выслать эту систему?
+* Ваше физическое местонахождение. Мы стараемся делать пересылку простой и недорогой, насколько только это возможно.
+* Также укажите, хотите ли вы получить <<#taxcredit,налоговый вычет>> за эту систему. (Заметьте, что не за все пожертвования можно получить реальные налоговые вычеты, так как накладные расходы на оформление вычета могут превысить стоимость соответствующего пожертвования.)
 
 [[components]]
-=== Комплектующие
+=== Компьютерные комплектующие
 
-Если у вас есть оборудование, которое вы можете передать Проекту, пожалуйста, свяжитесь с нами со следующей информацией:
+Если у вас есть оборудование, которое вы хотели бы передать Проекту, пожалуйста, свяжитесь с нами, предоставив следующую информацию:
 
-* Описание оборудования: модель, номер по каталогу, производитель и так далее. Если у вас есть точная ссылка на страницу сайта производителя об этом комплектующем, это будет полезным.
-* Поддерживается ли в настоящее время FreeBSD это оборудование?
-* Какая документация у вас есть? Просто оборудования недостаточно для написания драйвера; авторам драйверов нужна подробная информация о микросхемах от производителя. (Не заботьтесь слишком об этом, если у вас такой документации не окажется, так как её может удастся найти где-то ещё.)
-* Можете ли вы прислать эту систему?
-* Ваше физическое местоположение. Мы стараемся выполнять пересылки максимально просто и недорого.
-* Также укажите, хотите ли вы получить <<taxcredit,налоговые вычеты>> за это оборудование. (Заметьте, что не все пожертвования могут получить реальные налоговые вычеты, так как стоимость получения вычета может превысить стоимость пожертвования.)
+* Описание оборудования: модель, номер по каталогу производителя, производитель и так далее. Если у вас есть точная ссылка на страницу этого комплектующего на сайте производителя, это будет полезным.
+* Поддерживается ли это оборудование в настоящее время во FreeBSD?
+* Какая документация у вас имеется? Просто оборудования недостаточно для написания драйвера; авторам драйверов нужна подробная информация о наборах микросхем от производителя. (Не волнуйтесь слишком сильно, если у вас такая документация отсутствует, так как она может найтись где-то ещё.)
+* Готовы ли вы выслать эту систему?
+* Ваше физическое местонахождение. Мы стараемся делать пересылку простой и недорогой, насколько только это возможно.
+* Также укажите, хотите ли вы получить <<#taxcredit,налоговый вычет>> за это оборудование. (Заметьте, что не за все пожертвования можно получить реальные налоговые вычеты, так как накладные расходы на оформление вычета могут превысить стоимость соответствующего пожертвования.)
 
 === Что мы делаем с этой информацией
 
-Как только мы получаем описание пожертвования, Центр Пожертвований связывается с сообществом разработчиков и предлагает им этот ресурс. Если у нас есть разработчик, которому понравится это предложение, мы связываем дарителя и получателя напрямую для обсуждения вопросов доставки. Если предложением заинтересовались несколько разработчиков, мы пытаемся выяснить, какой из них сможет использовать ресурс с максимальной пользой для Проекта. Если никто из разработчиков предложением не заинтересовался, мы отклоняем предложение.
+Как только мы получим описание пожертвования, Центр пожертвований свяжется с сообществом разработчиков и предложит им этот ресурс. Если у нас найдётся разработчик, которому понравится пожертвование, мы свяжем дарителя и получателя для обсуждения вопросов доставки. Если предложением заинтересовались несколько разработчиков, мы пытаемся выяснить, для чего каждый из разработчиков стал бы использовать ресурс, и распределим его с максимальной пользой для Проекта. Если никто из разработчиков предложением не заинтересовался, мы отклоняем это предложение.
 
-Мы стремимся отрабатывать (или отклонять) все пожертвования в течение 7 дней после получения полной информации.
+Нашей целью является принятие (или отклонение) всех пожертвований в течение 7 дней после получения полной информации.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (26.11.2024): e05ba92d40bf5d897a954d6825ee6b2df8b72e7b
+//
