--- a/website/content/en/releases/14.4R/hardware.adoc
+++ b/website/content/en/releases/14.4R/hardware.adoc
@@ -3,7 +3,7 @@ title: FreeBSD 14.4 Hardware Notes
 sidenav: download
 ---
 
-:localRel: X.Y
+:localRel: 14.4
 :doctype: article
 :toc: macro
 :toclevels: 2
@@ -173,7 +173,7 @@ Raptor CS:
 * Talos II (POWER9)
 * Blackbird (POWER9)
 
-crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER7 through POWER4, including:
+crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER9 through POWER4, including the above as well as:
 
 A-EON:
 
@@ -680,9 +680,10 @@ not known what the chipset can do and how to program it.
 
 
 
-Controllers supported by the
+The
 **ciss**
-driver include:
+driver supports controllers implementing
+Common Interface for SCSI-3 Support Open Specification v1.04, including:
 
 *	Compaq Smart Array 5300 (simple mode only)
 *	Compaq Smart Array 532
@@ -710,6 +711,7 @@ driver include:
 *	HP Smart Array P430
 *	HP Smart Array P430i
 *	HP Smart Array P431
+*	HP Smart Array P440ar
 *	HP Smart Array P530
 *	HP Smart Array P531
 *	HP Smart Array P600
@@ -864,7 +866,7 @@ controllers.
 
 The
 **isp**
-driver supports the following optical Fibre Chanel adapters:
+driver supports the following optical Fibre Channel adapters:
 
 	Model:                               Speed:   Bus:  
 	Qlogic QLE2874 (2814)                64Gb     PCIe  
@@ -891,6 +893,7 @@ driver supports the following hardware:
 *	LSI MegaRAID SAS 9260
 *	Dell PERC5
 *	Dell PERC6
+*	Fujitsu RAID Controller SAS 6Gbit/s 1GB (D3116)
 *	IBM ServeRAID M1015 SAS/SATA
 *	IBM ServeRAID M1115 SAS/SATA
 *	IBM ServeRAID M5015 SAS/SATA
@@ -1058,29 +1061,32 @@ can take on - no separate compilation is required.
 
 The
 **mrsas**
-driver supports the following hardware:
+driver supports the following LSI/Broadcom SATA/SAS RAID controllers:
 
-\[ Thunderbolt 6Gb/s MR controller ]
-
-*	LSI MegaRAID SAS 9265
-*	LSI MegaRAID SAS 9266
-*	LSI MegaRAID SAS 9267
-*	LSI MegaRAID SAS 9270
-*	LSI MegaRAID SAS 9271
-*	LSI MegaRAID SAS 9272
-*	LSI MegaRAID SAS 9285
-*	LSI MegaRAID SAS 9286
-*	DELL PERC H810
-*	DELL PERC H710/P
-
-\[ Invader/Fury 12Gb/s MR controller ]
-
-*	LSI MegaRAID SAS 9380
-*	LSI MegaRAID SAS 9361
-*	LSI MegaRAID SAS 9341
-*	DELL PERC H830
-*	DELL PERC H730/P
-*	DELL PERC H330
+	Controller               Chip            Speed  
+	Broadcom SAS3916         Aero            12Gb/s  
+	Broadcom SAS3908         Aero            12Gb/s  
+	LSI MegaRAID SAS 9380    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9361    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9341    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9286    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9285    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9272    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9271    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9270    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9267    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9266    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9265    Thunderbolt     6Gb/s  
+	LSI SAS 3108                             12Gb/s  
+	LSI SAS 3008                             12Gb/s  
+	LSI SAS 2308                             6Gb/s  
+	LSI SAS 2208                             6Gb/s  
+	DELL PERC H830           Invader/Fury    12Gb/s  
+	DELL PERC H810           Thunderbolt     6Gb/s  
+	DELL PERC H730/P         Invader/Fury    12Gb/s  
+	DELL PERC H710/P         Thunderbolt     6Gb/s  
+	DELL PERC H330           Invader/Fury    12Gb/s  
+	Fujitsu D3116            Thunderbolt     6Gb/s
 
 
 
@@ -1113,6 +1119,7 @@ Gen-IIe (SATA 3Gbps, NCQ, PMP with FBS):
 Note, that this hardware supports command queueing and FIS-based switching
 only for ATA DMA commands.
 ATAPI and non-DMA ATA commands executed one by one for each port.
+
 
 
 
@@ -1926,6 +1933,7 @@ The
 driver supports Intel 10Gb Ethernet PCIe adapters,
 including:
 
+*	Intel(R) Ethernet E610
 *	Intel(R) Ethernet X553
 *	Intel(R) Ethernet X552
 *	Intel(R) Ethernet X550
@@ -2035,7 +2043,7 @@ driver supports the following cards:
 
 The
 **mgb**
-driver supports:
+driver supports Microchip PCIe Gigabit Ethernet interfaces, including:
 
 *	Microchip LAN7430 PCIe Gigabit Ethernet controller with PHY
 *	Microchip LAN7431 PCIe Gigabit Ethernet controller with RGMII interface
@@ -2145,7 +2153,7 @@ Yukon II based Gigabit Ethernet controller chips, including:
 
 The
 **muge**
-driver supports:
+driver supports Microchip USB Gigabit Ethernet interfaces, including:
 
 *	Microchip LAN7800 USB 3.1 Gigabit Ethernet controller with PHY
 *	Microchip LAN7850 USB 2.0 Gigabit Ethernet controller with PHY
@@ -3912,6 +3920,7 @@ Cypress USB to RS232 bridge chips:
 
 
 
+
 The
 **uftdi**
 driver supports the following USB to serial UART controllers:
@@ -4699,7 +4708,6 @@ The driver supports the following IEEE 1394 OHCI chipsets:
 *	VIA Fire II (VT6306)
 
 
-[amd64, i386] Serial Bus Protocol 2 (SBP-2) storage devices (man:sbp[4] driver)
 
 [[bluetooth]]
 === Bluetooth Devices
@@ -4852,6 +4860,7 @@ including many laptop pointing devices (man:psm[4] driver)
 man:moused[8] has more information on using traditional pointing devices with the FreeBSD console.
 ====
 
+
 [amd64, i386] Floppy drives (man:fdc[4] driver)
 
 [amd64, i386] VGA-compatible video cards (man:vga[4] driver)
@@ -4862,12 +4871,6 @@ Information regarding specific video cards and compatibility with Xorg can be fo
 ====
 
 [amd64, i386] "PC standard" parallel ports (man:ppc[4] driver)
-
-[i386] PHS Data Communication Card/PCCARD
-
-* NTT DoCoMo P-in Comp@ct
-* Panasonic KX-PH405
-* SII MC-P200
 
 
 The
@@ -5055,4 +5058,46 @@ formerly known as Winbond, and ITE, namely:
 *	Winbond 83687THF
 *	Winbond 83697HF/UG
 
+
+
+
+The following devices should work:
+
+Century Corp. Japan Plus One LCD-8000U
+
+Century Corp. Japan Plus One LCD-4300U
+
+DisplayLink USB to DVI
+
+ForwardVideo EasyCAP008 USB to DVI
+
+HP USB 2.0 Docking Station (FQ834)
+
+HP USB Graphics Adapter (NL571)
+
+IOGEAR USB 2.0 External DVI (GUC2020)
+
+Koenig CMP-USBVGA10 and CMP-USBVGA11
+
+Lenovo 45K5296 USB to DVI
+
+Lenovo ThinkVision LT1421
+
+Lilliput UM-70
+
+Nanovision MiMo UM-710 and UM-740
+
+Rextron VCUD60 USB to DVI
+
+Samsung LD220
+
+StarTech CONV-USB2DVI
+
+Sunweit USB to DVI
+
+Unitek Y-2240 USB to DVI
+
+VideoHome NBdock1920
+
+i-tec USB 2.0 Docking Station (USBDVIDOCK)
 
