--- a/website/content/en/releases/14.4R/schedule.adoc
+++ b/website/content/en/releases/14.4R/schedule.adoc
@@ -33,7 +33,7 @@ General discussions about the pending release and known issues should be sent to
 |===
 |Action |Expected |Actual |Description
 |Initial release schedule announcement |- |15 October 2025 |Release Engineers send announcement email to developers with a rough schedule.
-|Release schedule reminder |9 January 2026 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Release schedule reminder |9 January 2026 |9 January 2026 |Release Engineers send reminder announcement e-mail to developers with updated schedule.
 |Code slush begins |23 January 2026 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |6 February 2026 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |6 February 2026 |- |First beta test snapshot.
