--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -72,6 +72,10 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 **Workaround**: systems installed with man:pkgbase[7] must backup and reinstall +
 **State**: works as intended, man:pkgbase[7] is an experimental preview +
 
+4. **FreeBSD/powerpc** images do not boot on Apple G5 systems +
+**Workaround**: do not install this release on Apple G5 systems +
+**State**: fixed in main - https://bugs.freebsd.org/292341 +
+
 [[late-news]]
 == Late-Breaking News
 
