new committer (src): Pouria Mousavizadeh Tehrani (pouria)
Add myself as new committer (src)

Complete steps 1-4,6,10 for new committers from the committer's guide

Reviewed by: glebius
Approved by: glebius (mentor)
Differential Revision: https://reviews.freebsd.org/D54638

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1536,6 +1536,9 @@ include::{include-path}vexeduxr.key[]
 === `{alven}`
 include::{include-path}alven.key[]
 
+=== `{pouria}`
+include::{include-path}pouria.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
