--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -2771,6 +2771,10 @@
 :pluknet-email: pluknet@FreeBSD.org
 :pluknet: {pluknet-name} <{pluknet-email}>
 
+:pouria-name: Pouria Mousavizadeh Tehrani
+:pouria-email: pouria@FreeBSD.org
+:pouria: {pouria-name} <{pouria-email}>
+
 :proven-name: Chris Provenzano
 :proven-email: proven@FreeBSD.org
 :proven: {proven-name} <{proven-email}>
