committers-guide: Add Closes: commit msg trailer
Reviewed by:	vexeduxr
Differential Revision:	https://reviews.freebsd.org/D54448

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2678,6 +2678,11 @@ We include the commit title so that the referenced commit can be located even in
 It should include the entire URL to the pull request, as these often act as code reviews for the code.
 For example: `https://github.com/freebsd/freebsd-src/pull/745`
 
+| `Closes:`
+| This change concludes the patch series discussed at the specified Github pull request, and closes that request.
+It should include the entire URL to the pull request, as these often act as code reviews for the code.
+For example: `https://github.com/freebsd/freebsd-src/pull/745`
+
 |`Co-authored-by:`
 |The name and email address of an additional author of the commit.
 GitHub has a detailed description of the Co-authored-by trailer at https://docs.github.com/en/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/creating-a-commit-with-multiple-authors.
