--- a/website/content/en/status/report-2025-10-2025-12/suspend.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/suspend.adoc
@@ -4,7 +4,7 @@ Links: +
 link:https://obiw.ac/s0ix/[Blog] URL: link:https://obiw.ac/s0ix/[] +
 link:https://youtu.be/RCjPc4X2Edc[BSDCan talk on s2idle/S0ix] URL: https://youtu.be/RCjPc4X2Edc[] +
 link:https://people.freebsd.org/~obiwac/s0ix/[Sleep testing image] URL: https://people.freebsd.org/~obiwac/s0ix/[] +
-link:https://reviews.freebsd.org/D48721[Tip of the s2idle/S0ix + AMD SMU stack] URL: https://reviews.freebsd.org/D48721[] +
+link:https://reviews.freebsd.org/D48721[Tip of the s2idle/S0ix + AMD SMU stack] URL: https://reviews.freebsd.org/D48721[]
 
 Contact: obiwac <obiwac@FreeBSD.org>
 
