--- a/website/content/en/status/report-2025-10-2025-12/suspend.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/suspend.adoc
@@ -15,7 +15,7 @@ This will allow modern Intel and AMD laptops, some of which do not support ACPI 
 Entry to S0i3 is now working semi-reliably on the Framework 13 AMD Ryzen 7040 series laptops on FreeBSD 15.
 
 The sleep type and sysctl code has been committed, and a fix for a regression that introduced made (link:https://reviews.freebsd.org/D53909[D53909]).
-Because of some existing issues in our ACPI D-state code causing some devices which were previously working to fail entering S3, related commits for D-state changes necessary for S0ix had to be rolled back, though these don't seem to affect S0i3 entry on the aforementioned machine.
+Because of some existing issues in our ACPI D-state code causing some devices which were previously working to fail entering S3, related commits for D-state changes necessary for S0ix had to be rolled back, though these do not seem to affect S0i3 entry on the aforementioned machine.
 Work has been made on cleaning up and fixing our D-state code, but this isn't a huge priority so long as it doesn't prevent S0i3 entry on the targeted machine(s).
 
 The s2idle and SPMC revisions (link:https://reviews.freebsd.org/D48734[D48734] and link:https://reviews.freebsd.org/D48387[D48387] respectively) have been reviewed and have had some work done on them to prepare them for being committed.
