--- a/website/content/en/status/report-2025-10-2025-12/suspend.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/suspend.adoc
@@ -23,7 +23,7 @@ New exploratory revisions have been made to implement the s2idle loop (link:http
 
 Some issues have cropped up when resuming from S0i3, seemingly only when loading the USB4 driver, which have been looked into.
 
-A pre-built sleep testing image is available to easily testing S0i3 entry on machines.
+A pre-built sleep testing image is available to easily test S0i3 entry on machines.
 Detailed instructions are on the link:https://obiw.ac/s0ix/[webpage].
 
 With respect to the links, the blog post entry is still outdated.
