Document Francesco Caruso's donation of an OrangePi RV2 to des@

--- a/website/content/en/donations/donors.adoc
+++ b/website/content/en/donations/donors.adoc
@@ -11,6 +11,7 @@ This page keeps a record of hardware transactions that took place under the dona
 [width="100%",cols="25%,50%,25%",options="header",]
 |===
 |DONOR |ITEMS |RECIPIENTS
+|Francesco Caruso <indirizzopoi@proton.me> |1x OrangePi RV2 |des
 |Andy <atweiden@ioiojo.com> |13x Framework laptops |gnn, lme, cy, mp, dumbbell, jlduran, jrm, markj, adridg, christos, olce, bz, erj
 |Pau Amma <pauamma@gundo.com> |1x Lenovo Z50-70 |gbe
 |Greg Oshiro <greg.oshiro@gmail.com> |3x HP DL380 gen7 servers |vishwin
