handbook/network-servers: Fix slapd_flags format
Service would not start until flags were presented on a single line.

Reviewed by:	ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/597

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -1614,8 +1614,7 @@ As stated in [.filename]#/usr/local/etc/rc.d/slapd#, to properly run [.filename]
 [.programlisting]
 ....
 slapd_enable="YES"
-slapd_flags='-h "ldapi://%2fvar%2frun%2fopenldap%2fldapi/
-ldap://0.0.0.0/"'
+slapd_flags='-h "ldapi://%2fvar%2frun%2fopenldap%2fldapi/ ldap://0.0.0.0/"'
 slapd_sockets="/var/run/openldap/ldapi"
 slapd_cn_config="YES"
 ....
