--- a/website/content/ru/releases/15.0R/hardware.adoc
+++ b/website/content/ru/releases/15.0R/hardware.adoc
@@ -5034,8 +5034,33 @@ man:moused[8] содержит дополнительную информацию
 **u2f**
 поддерживает USB-ключи безопасности, совместимые со стандартом FIDO/U2F.
 
+Драйвер
+**man:udl[4]**
+поддерживает дисплейные устройства с интерфейсом USB,
+построенные на базе микросхем DisplayLink DL-120 и DL-160, в том числе:
+
+*      Century Corp. Japan Plus One LCD-8000U
+*      Century Corp. Japan Plus One LCD-4300U
+*      DisplayLink USB to DVI
+*      ForwardVideo EasyCAP008 USB to DVI
+*      HP USB 2.0 Docking Station (FQ834)
+*      HP USB Graphics Adapter (NL571)
+*      IOGEAR USB 2.0 External DVI (GUC2020)
+*      Koenig CMP-USBVGA10 и CMP-USBVGA11
+*      Lenovo 45K5296 USB to DVI
+*      Lenovo ThinkVision LT1421
+*      Lilliput UM-70
+*      Nanovision MiMo UM-710 и UM-740
+*      Rextron VCUD60 USB to DVI
+*      Samsung LD220
+*      StarTech CONV-USB2DVI
+*      Sunweit USB to DVI
+*      Unitek Y-2240 USB to DVI
+*      VideoHome NBdock1920
+*      i-tec USB 2.0 Docking Station (USBDVIDOCK)
+
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (14.11.2025): def336c22c1ac5d8771ecd6727d8d170d36470a4
+// Original EN revision (23.12.2025): 004b8a3fae83762be2e55b54f1e82aebdbf4a7fe
 //
