website/ru: Update releases/15.0R/errata.adoc
Update to the latest EN revision:
releases/15.0R/errata.adoc (4faf0e7a8a20a7ddda25d965e68587401dbf8f79)

Reviewed by:	maxim (mentor), marck, vladlen
Differential Revision:	https://reviews.freebsd.org/D54690

--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -11,7 +11,7 @@ sidenav: download
 
 == Аннотация
 
-В этом документе перечислены пункты исправлений и дополнений для FreeBSD {release}, содержащие важную информацию, обнаруженную после выпуска или слишком поздно в цикле выпуска, чтобы быть включённой в документацию выпуска.
+В этом документе перечислены исправления и дополнения для FreeBSD {release}, содержащие важную информацию, обнаруженную после выпуска или слишком поздно в цикле выпуска, чтобы быть включённой в документацию выпуска.
 Эта информация включает рекомендации по безопасности, а также новости, связанные с программным обеспечением или документацией, которые могут повлиять на его работу или удобство использования.
 Перед установкой этой версии FreeBSD всегда следует обращаться к актуальной версии этого документа.
 
@@ -65,7 +65,7 @@ sidenav: download
 == Открытые проблемы
 
 1. **man:ipfw[8]**: Сервис блокирует работу сетевых служб при загрузке ядра 15.0 с пользовательским окружением 14.3 +
-**Обходное решение**: полностью завершите модернизацию до перезапуска систем с man:ipfw[8] +
+**Обходное решение**: отключите man:ipfw[8] либо полностью завершите модернизацию до перезапуска систем с man:ipfw[8] +
 **Статус**: открытая - https://bugs.freebsd.org/291562 +
 
 2. **man:devinfo[8]**: Формат выдаваемого результата случайно изменился +
@@ -76,6 +76,14 @@ sidenav: download
 **Обходное решение**: системы, установленные при помощи man:pkgbase[7], должны быть переустановлены с использованием резервных копий +
 **Статус**: работает в соответствии с ожиданиями, man:pkgbase[7] является экспериментальным инструментом +
 
+4. **FreeBSD/powerpc**: Загрузочные образы не запускаются на системах Apple G5 +
+**Обходное решение**: не устанавливайте этот релиз на системах Apple G5 +
+**Статус**: исправлено в ветке main - https://bugs.freebsd.org/292341 +
+
+5. **man:loader.efi[8]**: Имеется изъян, не позволяющий осуществить загрузку на некоторых системах +
+**Обходное решение**: укажите `console="eficom"` в приглашении man:loader[8], если при загрузке ядра происходит сбой +
+**Статус**: исправлено в ветке main - https://bugs.freebsd.org/291461 +
+
 [[late-news]]
 == Последние новости
 
@@ -84,5 +92,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (04.01.2026): 7b936eee18f57cb2b1f05d5120b9dc45275a163b
+// Original EN revision (13.01.2026): 4faf0e7a8a20a7ddda25d965e68587401dbf8f79
 //
