--- a/website/content/en/status/report-2025-10-2025-12/parthenope-design-ideas.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/parthenope-design-ideas.adoc
@@ -8,8 +8,8 @@ Contact: Alfonso Sabato Siciliano <asiciliano@FreeBSD.org>
 Parthenope is a modular, two-step installer for the FreeBSD operating system, written primarily in Lua.
 The installation process is divided into two phases:
 
-. In the first step, configuration files and installation commands are generated using a variety of interactive interfaces.
-. In the second step, the actual system installation is executed based on the previously created files.
+. Configuration files and installation commands are generated using a variety of interactive interfaces.
+. The actual system installation is executed based on the previously created files.
 
 The project is simple, extensible, and flexible.
 It is designed to support multiple frontends, languages, installation modes ("Auto", "Easy", and "Expert"), interactive levels, and logging options.
