--- a/website/content/en/releases/15.1R/installation.adoc
+++ b/website/content/en/releases/15.1R/installation.adoc
@@ -1,12 +1,12 @@
 ---
-title: "FreeBSD X.0-RELEASE Installation Instructions"
+title: "FreeBSD 15.1-RELEASE Installation Instructions"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:releasePrev: X.-1-RELEASE
-:releasePrevLegacy: X-1.Y-RELEASE
-:localRel: X.0
+:releaseCurrent: 15.1-RELEASE
+:releasePrev: 15.0-RELEASE
+:releasePrevLegacy: 14.4-RELEASE
+:localRel: 15.1
 
 include::shared/en/urls.adoc[]
 
