--- a/website/content/en/releases/15.1R/relnotes.adoc
+++ b/website/content/en/releases/15.1R/relnotes.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Release Notes"
+title: "FreeBSD 15.1-RELEASE Release Notes"
 sidenav: download
 ---
 
-:localRel: X.0
-:releaseCurrent: X.0-RELEASE
-:releaseBranch: X-STABLE
+:localRel: 15.1
+:releaseCurrent: 15.1-RELEASE
+:releaseBranch: 15-STABLE
 :releasePrev: X.Y-RELEASE
 :releaseNext: X.Y-RELEASE
 :releaseType: "release"
