--- a/website/content/en/releases/15.1R/readme.adoc
+++ b/website/content/en/releases/15.1R/readme.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE README"
+title: "FreeBSD 15.1-RELEASE README"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
+:releaseCurrent: 15.1-RELEASE
 :releaseType: release
-:releaseBranch: X-STABLE
+:releaseBranch: 15-STABLE
 :releasePrevStable: X.Y-RELEASE
 :releasePrev: X.Y-RELEASE
 
