--- a/website/content/en/releases/15.1R/schedule.adoc
+++ b/website/content/en/releases/15.1R/schedule.adoc
@@ -1,14 +1,14 @@
 ---
-title: "FreeBSD X.0 Release Process"
+title: "FreeBSD 15.1 Release Process"
 sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
-:localRelPrev: X.Y-1
-:localRel: X.0
+:localRelPrev: 15.0
+:localRel: 15.1
 :localBranchHead: head
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localBranchStable: stable/15
+:localBranchReleng: releng/15.1
 :localMailingList: current
 
 include::shared/en/urls.adoc[]
