--- a/website/content/en/releases/15.1R/schedule.adoc
+++ b/website/content/en/releases/15.1R/schedule.adoc
@@ -9,7 +9,7 @@ sidenav: download
 :localBranchHead: head
 :localBranchStable: stable/15
 :localBranchReleng: releng/15.1
-:localMailingList: current
+:localMailingList: stable
 
 include::shared/en/urls.adoc[]
 
@@ -28,28 +28,23 @@ General discussions about the pending release and known issues should be sent to
 
 == Schedule
 
-During the {localBranchHead} freeze, the Release Engineering Team may create ALPHA snapshots to publish for testing purposes.
-As the frequency and total number of the ALPHA snapshots will depend on the length of time the {localBranchHead} branch is frozen, no official schedule is provided.
-
-Announcements regarding the availability of the ALPHA snapshots will be sent to the mailto:freebsd-current@FreeBSD.org[freebsd-current] and mailto:freebsd-snapshots@FreeBSD.org[freebsd-snapshots] mailing lists.
-
 [.tblbasic]
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-|Initial release schedule announcement |- |XXX |Release Engineers send announcement email to developers with a rough schedule.
-|Release schedule reminder |XXX |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|Code slush begins |XXX |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
-|{localBranchReleng} branch |XXX |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
-|BETA1 builds begin |XXX |- |First beta test snapshot.
-|BETA2 builds begin |XXX |- |Second beta test snapshot.
-|BETA3 builds begin |XXX |- |Third beta test snapshot.
-|RC1 builds begin |XXX |- |First release candidate.
-|RELEASE builds begin |XXX |- |{localRel}-RELEASE builds begin.
-|RELEASE announcement |XXX |- |{localRel}-RELEASE press release.
-|{localRelPrev} EoL |XXX |- |{localRelPrev}-RELEASE no longer supported.
-|{localRel} EoL |XXX |- |{localRel}-RELEASE no longer supported.
-|{localBranchStable} EoL |XXX |- |{localBranchStable} no longer supported.
+|Initial release schedule announcement |- |15 January 2026 |Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |3 April 2026 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |17 April 2026 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |1 May 2026 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |1 May 2026 |- |First beta test snapshot.
+|BETA2 builds begin |8 May 2026 |- |Second beta test snapshot.
+|BETA3 builds begin |15 May 2026 |- |Third beta test snapshot.
+|RC1 builds begin |22 May 2026 |- |First release candidate.
+|RELEASE builds begin |29 May 2026 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |2 June 2026 |- |{localRel}-RELEASE press release.
+|{localRelPrev} EoL |30 September 2026 |- |{localRelPrev}-RELEASE no longer supported.
+|{localRel} EoL |31 March 2027 |- |{localRel}-RELEASE no longer supported.
+|{localBranchStable} EoL |31 December 2029 |- |{localBranchStable} no longer supported.
 |===
 
 "*" indicates "as-needed" items.
