--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,7 +33,7 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |March 2026 |FreeBSD 14.4 |link:../releases/14.4R/schedule/[Target Schedule]
-|June 2026 |FreeBSD 15.1 |
+|June 2026 |FreeBSD 15.1 |link:../releases/15.1R/schedule/[Target Schedule]
 |September 2026 |FreeBSD 14.5 |
 |December 2026 |FreeBSD 15.2 |
 |March 2027 |FreeBSD 14.6 |
