--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -55,12 +55,12 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: IGNORE
+:beta2-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
 :beta2-testing: IGNORE
-:betarel2-current: 15.0
+:betarel2-current: 15.1
 :betarel2-vers: RELEASE
 :u-betarel2-schedule: https://www.FreeBSD.org/releases/{betarel2-current}R/schedule/
 
