new committer (src): Siva Mahadevan (siva)
Complete steps 1-4 for new committers from the guide.

Reviewed by:		lwhsu
Approved by:		lwhsu (mentor)
Differential Revision:	https://reviews.freebsd.org/D54735

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3179,6 +3179,10 @@
 :simon-email: simon@FreeBSD.org
 :simon: {simon-name} <{simon-email}>
 
+:siva-name: Siva Mahadevan
+:siva-email: siva@FreeBSD.org
+:siva: {siva-name} <{siva-email}>
+
 :sjg-name: Simon J. Gerraty
 :sjg-email: sjg@FreeBSD.org
 :sjg: {sjg-name} <{sjg-email}>
