--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1539,6 +1539,9 @@ include::{include-path}alven.key[]
 === `{pouria}`
 include::{include-path}pouria.key[]
 
+=== `{siva}`
+include::{include-path}siva.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
