Document the __FreeBSD_version bump to 1403508 for various LinuxKPI changes.
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -1034,6 +1034,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |December 18, 2025
 |14.3-STABLE after changing the `bus_alloc_resource` API to accept the `rid` argument by value.
 
+|1403508
+|gitref:16e2bb8177bd86a954ef968551d8c8980582381a[repository="src",length=12]
+|January 16, 2026
+|14.3-STABLE after various changes to LinuxKPI.
+
 |===
 
 ////
